-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
16980
When racer test for DNE2, we found that the OI scrub was triggered unexpectedly. We are not sure whether it is DNE2 patches introduced issue or it is existing bug on master.
Lustre: lustre-MDT0002-o: trigger OI scrub by RPC for [0x300000401:0xd9:0x0], rc = 0 [1] Lustre: lustre-MDT0002-o: trigger OI scrub by RPC for [0x300000401:0xd9:0x0], rc = 0 [1] Lustre: lustre-MDT0002-o: trigger OI scrub by RPC for [0x300000401:0xd9:0x0], rc = 0 [1] Lustre: lustre-MDT0002-o: trigger OI scrub by RPC for [0x300000401:0xd9:0x0], rc = 0 [1] Lustre: lustre-MDT0002-o: trigger OI scrub by RPC for [0x300000401:0xd9:0x0], rc = 0 [1] Lustre: lustre-MDT0002-o: trigger OI scrub by RPC for [0x300000401:0xd9:0x0], rc = 0 [1]
- is related to
-
LU-5202 LFSCK 5: LFSCK needs to log all changes and errors found
-
- In Progress
-